store-app highlight matched words effect added

--- a/express-store-app/views/pages/home.ejs
+++ b/express-store-app/views/pages/home.ejs
@@ -67,6 +67,7 @@
         .children[0].querySelector('.main-nav__link')
         .classList.add('main-nav__link--active');
     </script>
+    <script src="/assets/js/highlight-text.js"></script>
     <script src="/assets/js/search.js"></script>
   </body>
 </html>
