--- a/express-store-app/views/assets/css/base.css
+++ b/express-store-app/views/assets/css/base.css
@@ -33,6 +33,19 @@ body {
   margin: 0 auto;
   max-width: 1100px;
 }
-.highlighted {
+.red {
+  background-color: orangered;
+}
+.green {
+  background-color: greenyellow;
+}
+.cyan {
+  background-color: cyan;
+}
+.orange {
+  background-color: orange;
+}
+
+.yellow {
   background-color: yellow;
 }
